Did some parser experimenting

--- a/Data/test.html
+++ b/Data/test.html
@@ -1,3 +1,12 @@
-<div>
-<p>Hello <br>World!</p>
+<div  disabled v=true b=01 class="oops привет 'a' | {b}" data-index-number="12314" >
+    wut?
+    <p>Hello <br>World!</p>
 </div>
+<r-block id="nope">
+    <p>oops</p>
+</r-block>
+<r-include/>
+<br>
+<h1>hello</h1>
+<span>1</span>
+<a href="#" />
