--- a/Data/test.html
+++ b/Data/test.html
@@ -7,6 +7,9 @@
 </r-block>
 <r-include/>
 <br>
+<div>
 <h1 r-if="a <1" r-tag="test">hello</h1>
 <span>1</span>
+</div>
+<span>2</span>
 <a href="#" />
