--- a/Data/test.html
+++ b/Data/test.html
@@ -3,13 +3,16 @@
     <p>Hello <br>World!</p>
 </div>
 <r-block id="nope">
-    <p>oops</p>
+    <h4>oops</h4>
 </r-block>
 <r-include/>
 <br>
 <div>
-<h1 r-if="a <1" r-tag="test">hello</h1>
-<span>1</span>
+    <h1 r-if="a <1" r-tag="test">hello</h1>
+    <span>1</span>
+    <div>
+        <h2>oh<span>-</span> no </h2>
+    </div>
 </div>
 <span>2</span>
 <a href="#" />
