--- a/Data/test.html
+++ b/Data/test.html
@@ -8,10 +8,18 @@
 <r-include/>
 <br>
 <div>
-    <h1 r-if="a <1" r-tag="test">hello</h1>
+    <h1 r-for-every="b" r-if="a <1" r-tag="test">hello</h1>
     <span>1</span>
     <div>
         <h2>oh<span>-</span> no </h2>
+        <r-block r-for-every="">
+          <p>Hello <r-index />: <r-item /></p>
+          <p>
+            <r-eval>
+              index < item.pos + :offset - data.oops.map { $0 / 2 } #(hello)
+            </r-eval>
+          </p>
+        </r-block>
     </div>
 </div>
 <span>2</span>
