Changed the AST types and added r-unset control tag parser

--- a/Data/test.html
+++ b/Data/test.html
@@ -42,6 +42,8 @@
 <r-eval line="1+2" />
 <br/>
 <p class="hidden">
+
 <r-unset name="class"/>
-    Amazing!
+    Amazing! <span>world</span>
 </p>
+<p class="hidden">Amazing! <span class="hidden"><r-unset name="class"/>world</span></p>
