Added remaining control tags

--- a/Data/test.html
+++ b/Data/test.html
@@ -55,6 +55,8 @@
 </script>
 
 <template>
-    <div> <h1> test </h1>
+    <div> <h1> test <r-value of="myStuff"/></h1>
     </div>
+    <r-value>
+        </r-value>
 </template>
