--- a/Data/test.html
+++ b/Data/test.html
@@ -1,4 +1,5 @@
 <r-include name="base"/>
+<r-var name="v" line="false" />
 <div  disabled v=true b=01 class="oops привет 'a' | {b}" data-index-number="12314" >
     wut?
     <p>Hello <br>World!</p>
@@ -24,7 +25,7 @@
     <r-block r-for-every="c">hello</r-block>
     <div>
         <h2>oh<span>-</span> no </h2>
-        <r-block r-for-every="v">
+        <r-block r-for-every="room">
           <p>Hello <r-index />: <r-item /></p>
           <p>
             <r-eval>
