Finished basic code generation logic

--- a/Data/test.html
+++ b/Data/test.html
@@ -78,4 +78,11 @@
     <p>2</p>
 </style>
 <r-value of="myVar"/>
-<h1  data-one=3> Test <span>  </span>  </h1>
+<h1  data-one=3> Test <span>  </span>  19</h1>
+<div><p>
+    no <span>33</span>
+    </p>
+    <div>
+        <span>NIO</span>
+    </div>
+</div>
