--- a/Data/test.html
+++ b/Data/test.html
@@ -65,7 +65,7 @@
 </p>
 <p class="hidden">Amazing! <span class="hidden" disabled><r-unset name="disabled"/><r-set name="class" value=" red" append/>world</span></p>
 <script>
-    let a = 12:
+    let a = 12;
     console.log('12' + a);
 </script>
 
