--- a/Data/Inner/Extra/extra.html
+++ b/Data/Inner/Extra/extra.html
@@ -1,2 +1,3 @@
-<r-extend name="inner.empty" r-if="1 < 2" />
+<r-extend name="inner.example" r-if="1 < 2" />
+<r-extend name="inner.extra.test" />
 <p>extra inner</p>
