Fixed a few runtime bugs

--- a/Resources/Pages/base.html
+++ b/Resources/Pages/base.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <slot name="head" />
+        <r-slot name="head" />
     </head>
 
-    <slot />
+    <r-slot />
 </html>
