--- a/Resources/Pages/index.html
+++ b/Resources/Pages/index.html
@@ -1,4 +1,12 @@
 <r-extend name="base" />
 <body>
-    <p>Hello <r-include name="components.world" /></p>
+    <r-set name="class" value="blue" append />
+    <h1>
+        Hello
+        <r-include name="components.world">
+            23+4+ <r-eval line="253-2" />
+        </r-include>
+    </h1>
+    <p><r-value of="req.url.string" /></p>
 </body>
+<title r-add-to-slot="head">New</title>
