--- a/Resources/Pages/index.html
+++ b/Resources/Pages/index.html
@@ -5,14 +5,14 @@
 <main>
   <h1>
     Hello
-    <r-include name="components.world" r-if="!(context?.isEmpty ?? true)">
+    <r-include name="components.world" r-if="!context.isEmpty">
       Ultra Heroes!
     </r-include>
     <r-block r-else> World?</r-block>
   </h1>
   <ol>
     <li r-for-every="context">
-      <p class='base'>
+      <p class="base">
         <r-set name="class" value=" rose" append />
         <r-include name="components.hello-me"><r-item /></r-include>
       </p>
@@ -23,13 +23,13 @@
 
   <p><r-value of="req.url.string" /></p>
   <button
-      class="button"
-      hx-post="/auth/logout?next=/"
-      hx-target="body"
-      data-loading-delay
-      data-loading-disable
+    class="button"
+    hx-post="/auth/logout?next=/"
+    hx-target="body"
+    data-loading-delay
+    data-loading-disable
   >
-      What's up?
+    What's up?
   </button>
 </main>
 <title r-add-to-slot="head">Hero List</title>
