Allowed running consecutive 'else' blocks

--- a/Resources/Pages/index.html
+++ b/Resources/Pages/index.html
@@ -15,6 +15,7 @@
             Ultra Heroes!
         </r-include>
         <r-block r-else> World?</r-block>
+        <span r-else>_!_</span>
     </h1>
     <ol>
         <li r-for-every="context">
