Fixed multiline attribute value parsing

--- a/Resources/Pages/index.html
+++ b/Resources/Pages/index.html
@@ -35,6 +35,9 @@
         hx-target="body"
         data-loading-delay
         data-loading-disable
+        onfocus="console.log('?');
+console.log('This is drastic?');
+        console.log('too many');"
     >
         What's up?
     </button>
