Added an option to drop the value in the r-set tag, defaulting to a flag value

--- a/Resources/Pages/index.html
+++ b/Resources/Pages/index.html
@@ -39,6 +39,7 @@
 console.log('This is drastic?');
         console.log('too many');"
     >
+        <r-set name="disabled" r-if="!context.isEmpty" />
         What's up?
     </button>
 </main>
