--- a/Resources/Pages/index.html
+++ b/Resources/Pages/index.html
@@ -41,12 +41,14 @@
         data-loading-delay
         data-loading-disable
         hx-vals='{"key": "\(key)"}'
-        on-click="console.log('?')"
+        disabled='\(context.count < 6 ? "true" : "false" )'
+        onclick="console.log('?')"
         onfocus="console.log('?');
 console.log('This is drastic?');
         console.log('too many');"
+        
     >
-        <r-set name="disabled" r-if="!context.isEmpty" />
+        <r-set name="requried" r-if="!context.isEmpty" />
         What's up?
     </button>
 </main>
